# court-iq

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
apps/cli/: main.py
apps/cli/commands/: __init__.py  ask.py  index.py  try_fiba.py
config/: settings.py
src/: embed.py  store.py
src/generate/: __init__.py  answer.py  llm.py  prompt.py
src/ingest/: chunk.py  clean.py  context.py  embed.py  extract.py  load.py  source.py  store.py
src/ingest/load/: __init__.py  engine.py
src/ingest/load/dialects/: __init__.py  fiba.py  nba.py
src/retrieve/: classify.py  retriever.py
tests/ingest/: test_load.py
