[project]
name = "court-iq"
version = "0.1.0"
description = "Bilingual RAG assistant for basketball rules and tactics."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-pymupdf4llm>=1.27.2",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "typer>=0.25.1",
]

[project.scripts]
court-iq = "apps.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config", "src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    # SWIG bindings in pymupdf emit these; external, harmless, not ours.
    "ignore:builtin type swig.* has no __module__ attribute:DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
